# softdtree

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml  typecheck.yml
src/: adam.hpp  candidate.hpp  main.cpp  node.hpp  soft_decision_tree.hpp
src/softdtree/: __init__.py
tests/softdtree/: test_add.py  test_base_soft_decision_tree_classifier.py  test_base_soft_decision_tree_regressor.py  test_node.py  test_soft_decision_tree_classifier.py  test_soft_decision_tree_regressor.py
