[project]
name = "softdtree"
version = "0.1.0"
description = "Soft Decision Tree"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
dependencies = []

[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=2.7.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
cmake.verbose = true

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [".venv", "venv"]
lint.select = ["ALL"]
lint.ignore = ["D211", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/softdtree/test_*.py" = ["D", "INP001", "N803", "N806", "PLR2004", "S101"]
