[project]
name = "softdtree"
version = "0.1.0"
description = "A Python library that implements classifier and regressor with Soft Decision Tree."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-filex = ["LICENSE.txt"]
authors = [
    { name = "Atsushi Tatsuma", email = "yoshoku@outlook.com" }
]
dependencies = [
    "scikit-learn>=1.6.1",
    "numpy>=1.21.0"
]

[project.urls]
Homepage = "https://github.com/yoshoku/softdtree"
Repository = "https://github.com/yoshoku/softdtree"
Issues = "https://github.com/yoshoku/softdtree/issues"

[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=2.7.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
cmake.verbose = true
sdist.exclude = [
    "tests/**",
    "dist/**",
    "build/**",
    ".git/**",
    ".github/**",
    ".gitignore",
    ".pre-commit-config.yaml",
    "*.lock"
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10"
]

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [".venv", "venv"]
lint.select = ["ALL"]
lint.ignore = ["D211", "D212", "N803", "N806", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/softdtree/test_*.py" = ["D", "INP001", "S101"]
"src/softdtree/__init__.py" = ["ARG002", "PLR0913"]
